[package]
name = "cycle-vault"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.1"

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }
cyc-token = { path = "../cyc-token" }
merchant-registry = { path = "../merchant-registry" }

